--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0, AlignAfterOpenBracket: Align,  NamespaceIndentation: All }"
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0, AlignAfterOpenBracket: Align,  NamespaceIndentation: All }",
+    "files.associations": {
+        "stdio.h": "c"
+    }
 }
