--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,15 +4,21 @@ on: [push]
 jobs:
   build:
     runs-on: macos-latest
-    
+
     steps:
       - name: Job Info
         run: |
           echo "Branch:  ${{ github.ref }}"
           echo "OS:      ${{ runner.os }} on GitHub"
           echo "Event:   ${{ github.event_name }}"
-      
-      - name: Install dependencies
+
+      - name: Install Dependencies
         run: |
           brew update
           brew install gcc make
+
+      - name: Test Building
+        run: |
+          as -o add_values.o data/add_values.s
+          g++ assembly_examples/task_2/add_values.cpp add_values.o -o add_values
+          ./add_values
