correct driver name

--- a/benchmarks/microbenchmarks/CMakeLists.txt
+++ b/benchmarks/microbenchmarks/CMakeLists.txt
@@ -22,4 +22,4 @@ endforeach()
 
 # link and compile
 
-add_executable(${TARGET_NAME} driver.cpp ${ASM_OBJECTS})
+add_executable(${TARGET_NAME} microbenchmark_driver.cpp ${ASM_OBJECTS})
