--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,5 +36,6 @@ jobs:
 
       - name: Run Microbenchmarks
         run: |
-          cd ./build/benchmarks/microbenchmarks/
+          cd ./build/
+          ls
           ./microbenchmark
