--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,6 @@ jobs:
 
       - name: Run Microbenchmarks
         run: |
-          cd ./build/
+          cd ./build/bin/
           ls
           ./microbenchmark
