--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,10 +33,8 @@ jobs:
           cd build 
           cmake ..
           cmake --build .
-          cd ./build/
-          ls
-          cd ./bin/
 
       - name: Run Microbenchmarks
         run: |
+          cd ./build/bin/
           ./microbenchmark
