--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(TensorCompiler)
 
-set(CMAKE_CXX_COMPILER g++)
+set(CMAKE_CXX_COMPILER c++)
 set(CMAKE_ASM_COMPILER as)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
