manully compile .s with cmake for CI

--- a/assembly_examples/task_2/CMakeLists.txt
+++ b/assembly_examples/task_2/CMakeLists.txt
@@ -1,10 +1,20 @@
 set(TARGET_NAME driver_copy)
 
-set(SOURCES
-    copy_c.c
-    copy_asm.s
-    copy_driver.cpp
+set(SRC_CPP copy_driver.cpp)
+set(SRC_C copy_c.c)
+set(SRC_ASM copy_asm.s)
+
+get_filename_component(ASM_OBJ_NAME ${SRC_ASM} NAME_WE)
+set(ASM_OBJ ${CMAKE_CURRENT_BINARY_DIR}/${ASM_OBJ_NAME}.o)
+
+add_custom_command(
+    OUTPUT ${ASM_OBJ}
+    COMMAND ${CMAKE_ASM_COMPILER} -o ${ASM_OBJ} ${SRC_ASM}
+    DEPENDS ${SRC_ASM}
 )
 
-# Create the executable
-add_executable(${TARGET_NAME} ${SOURCES})
+add_custom_target(copy_asm_obj DEPENDS ${ASM_OBJ})
+
+add_executable(${TARGET_NAME} ${SRC_CPP} ${SRC_C} ${ASM_OBJ})
+
+add_dependencies(${TARGET_NAME} copy_asm_obj)
