change throughput dir structure

--- a/benchmarks/microbenchmarks/throughput/CMakeLists.txt
+++ b/benchmarks/microbenchmarks/throughput/CMakeLists.txt
@@ -1,9 +1,9 @@
-set(TARGET_NAME microbenchmark)
+set(TARGET_NAME throughput_microbenchmark)
 
 # Assemble
 
 # get all benchmark files
-file(GLOB ASM_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/throughput/*.s")
+file(GLOB ASM_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/kernels/*.s")
 
 set(ASM_OBJECTS "")
 foreach(ASM_FILE IN LISTS ASM_SOURCES)
