add ctest infrastructure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ set(CMAKE_ASM_COMPILER as)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+include(CTest)
+enable_testing()
+
 add_subdirectory(./benchmarks/microbenchmarks/throughput)
 add_subdirectory(./benchmarks/microbenchmarks/latency)
 add_subdirectory(./assembly_examples/task_2)
+add_subdirectory(./assembly_examples/task_3/microkernel)
