add ctests to CI Pipeline

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,4 +46,8 @@ jobs:
         run: |
           cd ./build/bin/
           ./copy_driver
+
+      -name: Run Unittests
+          cd ./build/
+          ctest --verbose
         
