add missing run:

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,6 +48,7 @@ jobs:
           ./copy_driver
 
       - name: Run Unittests
+        run: |
           cd ./build/
           ctest --verbose
         
