--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,14 +43,18 @@ jobs:
           ./throughput_microbenchmark
           ./latency_microbenchmark
           ./neon_microbenchmark
-      
+
       - name: Run copy_driver
         run: |
           cd ./build/bin/
           ./copy_driver
 
+      - name: Run matmul_driver
+        run: |
+          cd ./build/bin/
+          ./matmul_driver
+
       - name: Run Unittests
         run: |
           cd ./build/
           ctest --verbose
-        
