--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,3 +33,15 @@ jobs:
       - name: Verify CMake Installation
         run: cmake --version
 
+      - name: Build Project
+        run: |
+          mkdir build
+          cd build
+          cmake ..
+          make
+      
+      - name: Run Tests
+        run: |
+          cd build
+          ctest
+
