--- a/src/mini_jit/CMakeLists.txt
+++ b/src/mini_jit/CMakeLists.txt
@@ -1,8 +1,35 @@
-# CMakeLists.txt for jiter
-file(GLOB_RECURSE JITER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/instructions/*.cpp")
+cmake_minimum_required(VERSION 3.15)
 
-add_library(jiter ${JITER_SOURCES})
-
-target_include_directories(jiter PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/instructions
+set(LIB_SOURCES
+    backend/Kernel.cpp
+    generator/Brgemm.cpp
+    instructions/base.cpp
+    instructions/neon.cpp
+    include/gemm_ref.cpp
 )
+
+add_library(mini_jit STATIC ${LIB_SOURCES})
+
+target_include_directories(mini_jit PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/backend
+    ${CMAKE_CURRENT_SOURCE_DIR}/generator
+    ${CMAKE_CURRENT_SOURCE_DIR}/instructions
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    target_compile_options(mini_jit PUBLIC -O3 -Wall -Wextra -pedantic)
+endif()
+
+set_target_properties(mini_jit PROPERTIES POSITION_INDEPENDENT_CODE ON)
+
+add_executable(gemm_benchmark benchmark.cpp)
+
+target_link_libraries(gemm_benchmark PRIVATE mini_jit)
+
+if (CMAKE_RUNTIME_OUTPUT_DIRECTORY)
+    set_target_properties(gemm_benchmark PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+    )
+endif()
