--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,13 @@
-# test directory CMakeLists.txt
+# Base-Instruction-Tests
+add_executable(mini_jit_base_instr_tests
+    test_base_instructions.cpp
+)
+target_link_libraries(mini_jit_base_instr_tests PRIVATE mini_jit)
+add_test(NAME BaseInstrTests COMMAND mini_jit_base_instr_tests)
 
-add_executable(jiter_tests test_base_instructions.cpp)
-
-target_link_libraries(jiter_tests PRIVATE jiter)
-
-add_test(NAME JiterTests COMMAND jiter_tests)
+# Mini-Jit-Tests
+add_executable(mini_jit_unit_tests
+    test_mini_jit.cpp
+)
+target_link_libraries(mini_jit_unit_tests PRIVATE mini_jit)
+add_test(NAME MiniJitTests COMMAND mini_jit_unit_tests)
