--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Base-Instruction-Tests
 add_executable(mini_jit_base_instr_tests
     test_base_instructions.cpp
+    test_utils.cpp
 )
 target_link_libraries(mini_jit_base_instr_tests PRIVATE mini_jit)
 add_test(NAME BaseInstrTests COMMAND mini_jit_base_instr_tests)
@@ -8,6 +9,7 @@ add_test(NAME BaseInstrTests COMMAND mini_jit_base_instr_tests)
 # Neon-Instruction-Tests
 add_executable(mini_jit_neon_instr_tests
     test_neon_instructions.cpp
+    test_utils.cpp
 )
 target_link_libraries(mini_jit_neon_instr_tests PRIVATE mini_jit)
 add_test(NAME NeonInstrTests COMMAND mini_jit_neon_instr_tests)
