add test to get_kernel_sizes

--- a/src/mini_jit/CMakeLists.txt
+++ b/src/mini_jit/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.15)
 set(LIB_SOURCES
     backend/Kernel.cpp
     generator/Brgemm.cpp
+    generator/util.cpp
     instructions/base.cpp
     instructions/neon.cpp
     include/gemm_ref.cpp
