--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,8 +15,8 @@ target_link_libraries(mini_jit_neon_instr_tests PRIVATE mini_jit)
 add_test(NAME NeonInstrTests COMMAND mini_jit_neon_instr_tests)
 
 # Mini-Jit-Tests
-add_executable(mini_jit_unit_tests
-    test_mini_jit.cpp
-)
-target_link_libraries(mini_jit_unit_tests PRIVATE mini_jit)
-add_test(NAME MiniJitTests COMMAND mini_jit_unit_tests)
+# add_executable(mini_jit_unit_tests
+#     test_mini_jit.cpp
+# )
+# target_link_libraries(mini_jit_unit_tests PRIVATE mini_jit)
+# add_test(NAME MiniJitTests COMMAND mini_jit_unit_tests)
