Bugfixes and Restructuring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,15 @@
-cmake_minimum_required(VERSION 3.10)
-project(mlc)
+cmake_minimum_required(VERSION 3.14)
+project(TenGenProject)
 
-set(CMAKE_CXX_COMPILER g++)
-set(CMAKE_ASM_COMPILER as)
-set(CMAKE_CXX_STANDARD 17)
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Output binary files into bin/
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-include(CTest)
-
-add_subdirectory(./src/mini_jit)
-
+# Subprojects
+add_subdirectory(TenGen)
 enable_testing()
-add_subdirectory(./test)
-add_subdirectory(./benchmark)
-
-
+add_subdirectory(TenGenTests)
