--- a/TenGenTests/CMakeLists.txt
+++ b/TenGenTests/CMakeLists.txt
@@ -11,13 +11,23 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
+# Fetch xtl first
 FetchContent_Declare(
-  fastor
-  GIT_REPOSITORY https://github.com/romeric/Fastor.git
+  xtl
+  GIT_REPOSITORY https://github.com/xtensor-stack/xtl.git
   GIT_TAG master  
 )
 
-FetchContent_MakeAvailable(fastor)
+FetchContent_MakeAvailable(xtl)
+
+# Fetch xtensor
+FetchContent_Declare(
+  xtensor
+  GIT_REPOSITORY https://github.com/xtensor-stack/xtensor.git
+  GIT_TAG master  
+)
+
+FetchContent_MakeAvailable(xtensor)
 
 enable_testing()
 
