--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Output binary files into bin/
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+enable_testing()
+
 # Subprojects
 add_subdirectory(TenGen)
 add_subdirectory(TenGenTests)
