--- a/TenGenTests/CMakeLists.txt
+++ b/TenGenTests/CMakeLists.txt
@@ -29,8 +29,6 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(xtensor)
 
-enable_testing()
-
 add_subdirectory(mini_jit/instructions)
 add_subdirectory(mini_jit/generator)
-add_subdirectory(tensor)
+# add_subdirectory(tensor)
