--- a/TenGenTests/CMakeLists.txt
+++ b/TenGenTests/CMakeLists.txt
@@ -31,4 +31,4 @@ FetchContent_MakeAvailable(xtensor)
 
 add_subdirectory(mini_jit/instructions)
 add_subdirectory(mini_jit/generator)
-# add_subdirectory(tensor)
+add_subdirectory(einsum/backend)
