--- a/TenGenTests/CMakeLists.txt
+++ b/TenGenTests/CMakeLists.txt
@@ -29,6 +29,16 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(xtensor)
 
+# Fetch xtensor-blas
+FetchContent_Declare(
+  xtensor-blas
+  GIT_REPOSITORY https://github.com/xtensor-stack/xtensor-blas.git
+  GIT_TAG master
+)
+
+FetchContent_MakeAvailable(xtensor-blas)
+
 add_subdirectory(mini_jit/instructions)
 add_subdirectory(mini_jit/generator)
 add_subdirectory(einsum/backend)
+add_subdirectory(tensor)
