--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Output binary files into bin/
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+# find OpenMP
+find_package(OpenMP REQUIRED)
+
 enable_testing()
 
 # Subprojects
