--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 # Subprojects
 add_subdirectory(TenGen)
 enable_testing()
-add_subdirectory(TenGenTests)
+# add_subdirectory(TenGenTests)
+add_subdirectory(src/einsum)
+add_subdirectory(test)
