Set CI to run just on main

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,7 @@ run-name: CI Pipeline triggered by ${{ github.actor }}
 on:
   push:
     branches:
+      - main
   pull_request:
     branches:
       - main
