--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,7 @@ set(TEST_SOURCES
     mini_jit/test_instructions.cpp
     mini_jit/test_generators.cpp
     einsum/test_einsum_tree.cpp
+    tensor/test_tensor.cpp
 )
 
 add_executable(tests ${TEST_SOURCES})
