--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(OpenMP REQUIRED)
 
 add_subdirectory(src/mini_jit)
 add_subdirectory(src/einsum)
+add_subdirectory(model)
 
 enable_testing()
 
