add test utils and einsum matmul tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,9 @@ set(TEST_SOURCES
     mini_jit/test_instructions.cpp
     mini_jit/test_generators.cpp
     einsum/test_einsum_tree.cpp
+    einsum/test_einsum_binary.cpp
     tensor/test_tensor.cpp
+    test_utils/test_utils.cpp
 )
 
 add_executable(tests ${TEST_SOURCES})
