Added benchmark for GEMM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(OpenMP REQUIRED)
 add_subdirectory(src/mini_jit)
 add_subdirectory(src/einsum)
 add_subdirectory(model)
+add_subdirectory(benchmark)
 
 enable_testing()
 
