--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,6 +1,5 @@
 # Unary-Benchmark
-add_executable(mini_jit_unary_benchmark
-    driver.cpp
-    ../test/test_utils.cpp
+add_executable(bench_gemm
+    bench_gemm.cpp
 )
-target_link_libraries(mini_jit_unary_benchmark PRIVATE mini_jit)
+target_link_libraries(bench_gemm PRIVATE mini_jit)
