--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,8 @@ set(TEST_SOURCES
     mini_jit/test_instructions.cpp
     mini_jit/test_generators.cpp
     mini_jit/test_gemm.cpp
+    mini_jit/test_brgemm.cpp
+    mini_jit/test_unary.cpp
     einsum/test_einsum_tree.cpp
     einsum/test_einsum_binary.cpp
     tensor/test_tensor.cpp
