Added simple TenOp impl

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -8,7 +8,11 @@ add_executable(bench_brgemm
 add_executable(bench_unary_jit
     bench_unary_jit.cpp
 )
+add_executable(bench_ten_op_backend
+    bench_ten_op_backend.cpp
+)
 
 target_link_libraries(bench_gemm PRIVATE mini_jit)
 target_link_libraries(bench_brgemm PRIVATE mini_jit)
 target_link_libraries(bench_unary_jit PRIVATE mini_jit)
+target_link_libraries(bench_ten_op_backend PRIVATE einsum)
