--- a/src/einsum/CMakeLists.txt
+++ b/src/einsum/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(
 set(LIB_SOURCES
     ./trees/einsum_trees.cpp
     ./backend/TensorOperation.cpp
+    ./backend/TensorOperationUnary.cpp
     ./include/einsum_ref.cpp
     ../tensor/tensor.cpp
 )
