--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -20,9 +20,14 @@ add_executable( bench_tree
     bench_tree.cpp
 )
 
+add_executable( check_ten_op_unary
+    check_ten_op_unary.cpp
+)
+
 target_link_libraries(bench_gemm PRIVATE mini_jit)
 target_link_libraries(bench_brgemm PRIVATE mini_jit)
 target_link_libraries(bench_unary_jit PRIVATE mini_jit)
 target_link_libraries(bench_ten_op_backend PRIVATE einsum)
 target_link_libraries(bench_ten_op_optimize PRIVATE einsum)
 target_link_libraries(bench_tree PRIVATE einsum)
+target_link_libraries( check_ten_op_unary PRIVATE einsum)
