Started testing iris model

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -24,6 +24,10 @@ add_executable( check_ten_op_unary
     check_ten_op_unary.cpp
 )
 
+add_executable( check_iris_model
+    check_iris_model.cpp
+)
+
 target_link_libraries(bench_gemm PRIVATE mini_jit)
 target_link_libraries(bench_brgemm PRIVATE mini_jit)
 target_link_libraries(bench_unary_jit PRIVATE mini_jit)
@@ -31,3 +35,4 @@ target_link_libraries(bench_ten_op_backend PRIVATE einsum)
 target_link_libraries(bench_ten_op_optimize PRIVATE einsum)
 target_link_libraries(bench_tree PRIVATE einsum)
 target_link_libraries( check_ten_op_unary PRIVATE einsum)
+target_link_libraries( check_iris_model PRIVATE einsum)
