--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -28,6 +28,10 @@ add_executable( check_iris_model
     check_iris_model.cpp
 )
 
+add_executable( bench_iris_model
+    bench_iris_model.cpp
+)
+
 target_link_libraries(bench_gemm PRIVATE mini_jit)
 target_link_libraries(bench_brgemm PRIVATE mini_jit)
 target_link_libraries(bench_unary_jit PRIVATE mini_jit)
@@ -36,3 +40,4 @@ target_link_libraries(bench_ten_op_optimize PRIVATE einsum)
 target_link_libraries(bench_tree PRIVATE einsum)
 target_link_libraries( check_ten_op_unary PRIVATE einsum)
 target_link_libraries( check_iris_model PRIVATE einsum)
+target_link_libraries( bench_iris_model PRIVATE einsum)
